--- a/server.properties
+++ b/server.properties
@@ -11,7 +11,7 @@ difficulty=1
 spawn-monsters=true
 op-permission-level=4
 announce-player-achievements=true
-pvp=false
+pvp=true
 snooper-enabled=true
 level-type=DEFAULT
 hardcore=false
@@ -34,5 +34,5 @@ online-mode=true
 max-build-height=256
 level-seed=
 use-native-transport=true
-motd=jonsnowd3n-sevtech-ages
+motd=SSL Community Minecraft Server
 enable-rcon=false
