--- a/server.properties
+++ b/server.properties
@@ -34,5 +34,5 @@ online-mode=true
 max-build-height=256
 level-seed=
 use-native-transport=true
-motd=SSL Community Minecraft Server
+motd=Kelnet Gaming
 enable-rcon=false
